Refactoring and reformatting; Fix checkstyle issues;